# NCF_Recommendation

./: .gitignore  LICENSE  README.md  ml-1m_GMF_10.pth  ml-1m_MLP_10.pth  ml-1m_NeuMF_10.pth  pyproject.toml  requirements.txt
NCF_Pytorch/: GMF_Model_train.py  GMF_model.py  GMF_model_README.md  MLP_model.py  MLP_model_README.md  MLP_model_train.py  NCF_evaluation.py  NCF_evaluation_README.md  NCF_pytorch.ipynb  NeuMF_model.py  NeuMF_model_README.md  NeuMF_model_train.py  datainfo.ipynb  ml-1m_GMF_10.pth  ml_1m_dataset.py  ml_1m_dataset_README.md  test_data.csv  test_negative_data.csv
previous_code/: movielens.ipynb
