[project]
name = "NCF_Recommendation"
version = "0.1.0"
description = "NCF_Recommendation"
readme = "README.md"
requires-python = "==3.12.3"
authors = [{ name = "Dhruv Panchal", email = "panchaldhruv27223@gmail.com" }]
license = { file = "LICENSE" }
dependencies = ["torch",                # PyTorch
                "torchvision",          # For datasets/transforms if needed
                "torchaudio",           # (optional) for audio tasks
                "tensorflow",           # TensorFlow
                "keras",                # Keras
                "numpy",
                "pandas",
                "scikit-learn",
                "matplotlib",
                "seaborn",
                "requests",
                "tqdm",
                "jupyterlab",
                "notebook",
                "ipykernel",
                "nbformat",
                "nbconvert",
                "scipy",
                "h5py",
                "flask",
                "fastapi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=8",
  "ruff>=0.5",
  "black>=24.0",
  "mypy>=1.10",
  "pytest-cov>=5",
  "pre-commit>=3.7"
]

[tool.hatch.build.targets.wheel]
packages = ["ncf_recommendation"]
